# thermite

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/: FUNDING.yml
.github/workflows/: rustdoc.yml
benches/: main.rs
crates/thermite/: Cargo.toml
crates/thermite-complex/: Cargo.toml
crates/thermite-hyperdual/: Cargo.toml
crates/thermite-special/: Cargo.toml
crates/thermite/benches/: main.rs
crates/thermite/examples/: asm.rs  plot.rs
crates/thermite/examples/geo/: mod.rs
crates/thermite/src/: divider.rs  lib.rs  macros.rs  mask.rs  runtime.rs
crates/thermite/src/backends/: macros.rs  mod.rs  polyfills.rs
crates/thermite/src/backends/avx1/: vf32.rs  vi32.rs  vi32_2.rs
crates/thermite/src/backends/avx2/: polyfills.rs  vf32.rs  vi16.rs  vi32.rs  vu32.rs
crates/thermite/src/backends/scalar/: mod.rs  vf32.rs  vu32.rs  vu64.rs
crates/thermite/src/backends/sse42/: mod.rs  polyfills.rs  vi32.rs  vu32.rs
crates/thermite/src/iter/: mod.rs  slice.rs
crates/thermite/src/math/: bessel.rs  compensated.rs  consts.rs  mod.rs  pd.rs  poly.rs  ps.rs
crates/thermite/src/rng/: mod.rs
crates/thermite/tests/: counts.rs  reverse.rs  sinh.rs
crates/thermite2/: Cargo.toml
dispatch/: Cargo.toml
dispatch/examples/: main.rs
dispatch/src/: lib.rs
examples/: asm.rs  dispatch.rs  geometry.rs  plot.rs  pos.rs
examples/geo/: mod.rs
implementors/thermite/: trait.SimdBitsInto.js
implementors/thermite2/: trait.Simd.js
implementors/thermite_special/: trait.SimdVectorizedSpecialFunctionsPolicied.js
src/: arch.rs  buffer.rs  divider.rs  element.rs  ext.rs  lib.rs  macros.rs  mask.rs  math.rs  pointer.rs  ptr.rs  runtime.rs
src/backends/: arch.rs  avx2.rs  common.rs  macros.rs  mod.rs  polyfills.rs  sse2.rs
src/iter/: aligned.rs
src/math/: bessel.rs  common.rs  compensated.rs  complex.rs  hyperdual.rs  mod.rs  pd.rs  poly.rs  ps.rs  vf32.rs
tests/: counts.rs  sat.rs
thermite/: all.html  attr.dispatch.html  enum.SimdInstructionSet.html  index.html  macro.dispatch_dyn!.html  macro.dispatch_dyn.html  macro.shuffle!.html  macro.shuffle.html  sidebar-items.js  struct.BitMask.html  struct.BranchfreeDivider.html  struct.Divider.html  struct.Mask.html  struct.SimdBuffer.html  struct.VPtr.html  struct.VectorBuffer.html  struct.Vptr.html  trait.Simd.html  trait.SimdAssociatedVector.html  trait.SimdBitsFrom.html  trait.SimdBitsInto.html  trait.SimdBitwise.html  trait.SimdCastFrom.html  trait.SimdCastTo.html  trait.SimdCasts.html  trait.SimdElement.html  trait.SimdFloatVector.html  trait.SimdFloatVectorExt.html  trait.SimdFromBits.html  trait.SimdFromCast.html  trait.SimdIntVector.html  trait.SimdIntegerDivision.html  trait.SimdIntoBits.html  trait.SimdPointer.html  trait.SimdShuffleIndices.html  trait.SimdSignedVector.html  trait.SimdUnsignedIntVector.html  trait.SimdVector.html  trait.SimdVectorBase.html  trait.SimdVectorizedMath.html  (+9 more)
thermite2/: all.html  index.html  sidebar-items.js  trait.Simd.html  trait.SimdFixedVector.html  trait.SimdFloatVector.html  trait.SimdOverloads.html  trait.SimdSignedVector.html  trait.SimdVector.html  trait.SimdVectorBase.html
thermite_complex/: all.html  index.html  sidebar-items.js  struct.Complex.html
thermite_dispatch/: all.html  attr.dispatch.html  index.html  sidebar-items.js
thermite_hyperdual/: all.html  index.html  sidebar-items.js  struct.HyperdualP.html  type.DualNumber.html  type.DuelNumber.html  type.Hyperdual.html
thermite_special/: all.html  index.html  sidebar-items.js  trait.SimdVectorizedSpecialFunctions.html  trait.SimdVectorizedSpecialFunctionsPolicied.html
(+3043 files in other folders)
