[package]
name = "thermite"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"

[features]
default = ["alloc"]
alloc = []
nightly = []

[dependencies]
paste = "1.0.2"
half = "1.6.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main"
harness = false

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1

[profile.bench]
opt-level = 3
lto = 'fat'
codegen-units = 1
