[package]
name = "thermite"
version = "0.1.1-alpha.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["novacrazy <novacrazy@gmail.com>"]
repository = "https://github.com/raygon-renderer/thermite"
documentation = "https://raygon-renderer.github.io/thermite/"
edition = "2018"

[features]
default = ["alloc"]
alloc = []
nightly = []

[dependencies]
paste = "1.0.3"
half = "1.6.0"

[dev-dependencies]
criterion = "0.3"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1

[profile.bench]
opt-level = 3
lto = 'fat'
codegen-units = 1

[[bench]]
name = "main"
harness = false
