[package]
name = "thermite-dispatch"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.7"
proc-macro2 = "1.0.24"
syn = { version = "1.0.48", features = ["full", "extra-traits", "visit-mut"] }

[dev-dependencies]
thermite = { path = "../" }
